--- a/.github/workflows/export-x-solution.yml
+++ b/.github/workflows/export-x-solution.yml
@@ -1,36 +1,77 @@
-# This is a basic workflow to help you get started with Actions
+name: export-x-solution
+# Export solution from DEV environment
+# unpack it and prepare, commit and push a git branch with the changes
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      # Enter this value (required)
+      solution_name:
+        description: 'name of the solution to worked on from Power Platform'
+        required: true
+      choice:
+        type: choice
+        description: Make a choice
+        options:
+        - DEV
+        - UAT
+        - PROD
+        required: true
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+env:
+#edit your values here
+  DEV_ENVIRONMENT_URL: https://org8474aff6.crm8.dynamics.com/
+  TEST_ENVIRONMENT_URL: https://orgc98173ac.crm8.dynamics.com/
+  USERNAME: rjSharma@myaction123.onmicrosoft.com
+  APPLICATION_ID: 54d911a3-513b-4a7f-8254-50093215d5b4
+  TENANT_ID: 97525e9a-595d-472c-8248-0dc58f852d61
+  CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+  SOLUTION_EXPORTED_FOLDER: out/exported/
+  SOLUTION_FOLDER: out/solutions/
+  SOLUTION_TARGET_FOLDER: solutions/
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+ export-from-dev:
+  runs-on: windows-latest
+   env:
+    RUNNER_DEBUG: 1
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+      with:
+        lfs: true
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: who-am-i dev
+      uses: microsoft/powerplatform-actions/who-am-i@0.4.0
+      with:
+        environment-url: ${{env.DEV_ENVIRONMENT_URL}}
+        app-id: ${{env.APPLICATION_ID}}
+        client-secret: ${{ secrets.CLIENT_SECRET }}
+        tenant-id: ${{env.TENANT_ID}}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: export-solution action
+      uses: microsoft/powerplatform-actions/export-solution@0.4.0
+      with:
+        environment-url: ${{env.DEV_ENVIRONMENT_URL}}
+        app-id: ${{env.APPLICATION_ID}}
+        client-secret: ${{ secrets.CLIENT_SECRET }}
+        tenant-id: ${{env.TENANT_ID}}
+        solution-name: ${{ github.event.inputs.solution_name }}
+        solution-output-file: ${{ env.SOLUTION_EXPORTED_FOLDER}}/${{ github.event.inputs.solution_name }}.zip
+
+    - name: unpack-solution action
+      uses: microsoft/powerplatform-actions/unpack-solution@0.4.0
+      with:
+        solution-file: ${{ env.SOLUTION_EXPORTED_FOLDER}}/${{ github.event.inputs.solution_name }}.zip
+        solution-folder: ${{ env.SOLUTION_FOLDER}}/${{ github.event.inputs.solution_name }}
+        solution-type: 'Unmanaged'
+        overwrite-files: true
+
+     - name: branch-solution, prepare it for a PullRequest
+       uses: microsoft/powerplatform-actions/branch-solution@0.4.0
+       with:
+        solution-folder: ${{ env.SOLUTION_FOLDER}}/${{ github.event.inputs.solution_name }}
+        solution-target-folder: ${{ env.SOLUTION_TARGET_FOLDER}}/${{ github.event.inputs.solution_name }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        allow-empty-commit: true
+       
